revision of project texts in pt-BR and added pt-BR version of the platonic solids

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             '#ao-info',
             'Computer Science student at UFJF. He loves everything about science and technology. He Currently interested in Virtual Reality,' +
             ' Augmented Reality and Computer Graphics.',
-            'Estudante de Ciência da Computação da UFJF.Adora tudo sobre ciência e tecnologia. Atualmente seus principais interesses são ' +
+            'Estudante de Ciência da Computação da UFJF. Adora tudo sobre ciência e tecnologia. Atualmente seus principais interesses são ' +
             'Realidade Virtual, Realidade Aumentada e Computação Gráfica.',
         );
 
@@ -437,7 +437,7 @@
         TRANSLATION.add(
             '#modal-message',
             'Your message was sent!',
-            'Sua mensagem foi enviada',
+            'Sua mensagem foi enviada!',
         );
 
         TRANSLATION.add(
