--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -202,7 +202,7 @@
                 building where they could walk through, mostly if it was in Virtual Reality`,
 
             `Para apresentar suas ideias aos clientes, os arquitetos costumam usar suas plantas e esboços. No entanto,
-                os clientes podem não entender de fato os planos, pois sao, frequentemente, leigos e os esboços são limitados
+                os clientes podem não entender de fato os planos, pois são, frequentemente, leigos e os esboços são limitados
                 em quão bem eles podem representar uma casa de verdade. Seria mais fácil para as pessoas comuns entenderem todos
                 esses planos e esboços se houvesse também uma representação 3D da construação pela qual eles pudessem andar, ainda
                 mais se fosse em Realidade Virtual.`
@@ -211,11 +211,11 @@
         TRANSLATION.add(
             '#p2',
             ` Architects often have 3D modeling skills already, but the various software they use to build their
-                models usually do not have support for ease navigation nor augmented and virtual reality (AR and VR).
+                models usually do not have support for easy navigation or augmented and virtual reality (AR and VR).
                 This apps aims to solve that problem, supplying the 3D navigation and the AR and VR support for the
                 already created 3D model.`,
 
-            `Arquitetos costuma ter expertise em modelagem 3D, mas os softwares que usam para construir seus modelos geralmente
+            `Arquitetos costumam ter habilidades em modelagem 3D, mas os softwares que usam para construir seus modelos geralmente
                 não têm suporte para uma fácil navegação pelo modelo nem para realidade virtual ou aumentada. Esse aplicativo tem por
                 objetivo resolver esse problema, fornecendo navegação 3D e suporte a RA e RV para modelos 3D já criados.`
         );
@@ -260,8 +260,8 @@
                 button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
                 if your device is sensitive to touch.`,
             `Quando usando um dispositivo móvel, aperte o botão "VR" no canto inferior direito da tela antes de inserir seu dispositivo no HMD.
-                Um círculo irá aparecer no chão quando pressionar algum botão do controle joystick e você irá ser teleportado para o círculo ao soltar o botão.
-                Alternativamente, também é possível se teleportar pressionado a barra de espaço caso esteja usando teclado, tocando na tela se seu dispositivo
+                Um círculo irá aparecer no chão quando pressionar algum botão do controle joystick e você será teleportado para o círculo ao soltar o botão.
+                Alternativamente, também é possível se teleportar pressionando a barra de espaço caso esteja usando teclado ou tocando na tela se seu dispositivo
                 for sensível ao toque.`
         );
 
