--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -217,12 +217,12 @@
                     tetrahedron was assigned to fire, the cube to earth, the octahedron to air, the icosahedron to water,
                     and the dodecahedron to heaven and constellations.`,
 
-            `O nome de sólidos platônicos foi dado ao filósofo ateniense Platão, que em seu diálogo Timeu
-                    relacionou quatro dos poliedros regulares com os quatro elementos básicos (fogo, ar, água e terra), que
-                    foram acreditados para compor toda a matéria através
-                    suas combinações, e o quinto poliedro foi associado o céu e as constelações. O
+            `O nome de sólidos platônicos foi dado ao filósofo ateniense Platão, que em seu diálogo Timaeus
+                    relacionou quatro dos poliedros regulares com os quatro elementos básicos (fogo, ar, água e terra), os quais
+                    eram vistos como compositores de toda a matéria através
+                    suas combinações, e o quinto poliedro foi associado ao céu e às constelações. O
                     o tetraedro foi atribuído ao fogo, o cubo à terra, o octaedro ao ar, o icosaedro à água,
-                    e o dodecaedro para o céu e constelações.`
+                    e o dodecaedro ao o céu e às constelações.`
         );
 
         TRANSLATION.add(
