--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -364,7 +364,7 @@
 
             `O Sistema Solar foi formado há 4,6 bilhões de anos. A grande maioria da massa do sistema está presente
                 no Sol, com a maior parte da massa restante contida em Júpiter. Apresenta 8 planetas ao redor
-                do sol, sendo Mercúrio, Vênus, Terra, Marte com uma superfície sólida e Júpiter, Saturno, Urano,
+                do sol, sendo Mercúrio, Vênus, Terra e Marte com uma superfície sólida e Júpiter, Saturno, Urano e
                 Netuno no estado gasoso e Plutão como um planeta anão.`
         );
 
