--- a/projects/src/virtual-travel-application.html
+++ b/projects/src/virtual-travel-application.html
@@ -8,6 +8,8 @@
     <script src="../libs/aframe-master.js"></script>
     <script src="../libs/vr-interface.js"></script>
     <script src="../libs/aframe-button-controls.js"></script>
+    <script src="../js/translation.js"></script>
+
 
     <script>
         AFRAME.registerComponent('config', {
@@ -139,8 +141,7 @@
 
         <a-sky src="#fort-point" rotation="0 -100 0" id="place"></a-sky>
 
-        config button-controls>
-        </a-entity>
+
 
         <a-entity
             vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.88 1.3; sideTextRotation: -40; bgTransparency: false;"
