--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -163,7 +163,7 @@
             Há diversos tipos dessas enfermidades e elas podem afetar quase qualquer parte do corpo.
             Derrame, aneurisma e trombose venosa profunda são algumas das doenças vasculares mais comuns e seus indícios e sintomas
             variam de um tipo para outro.
-            As doenças vasculares costuma ocorrer em lugares de turbulento fluxo sanguíneo, como nas artérias quando o fluxo muda de
+            As doenças vasculares costumam ocorrer em lugares de turbulento fluxo sanguíneo, como nas artérias quando o fluxo muda de
             direção abruptamente.`
         );
 
