--- a/projects/virtual-travel.html
+++ b/projects/virtual-travel.html
@@ -102,7 +102,7 @@
             `"Virtual Travel" is a project that aims to provide a trip around the world without you having to leave your home. 
               With a Virtual Reality mode, you can view several incredible places around the world and still find out some curiosities about each one.`,
 
-            `"Viagem Virtual" é um projeto que visa proporcionar uma viagem ao redor do mundo sem você ter que sair de casa.
+            `"Viagem Virtual" é um projeto que visa proporcionar uma viagem ao redor do mundo sem você tenha de sair de casa.
               Com o modo de Realidade Virtual, você pode visualizar vários lugares incríveis ao redor do mundo e ainda descobrir algumas curiosidades sobre cada um deles.`
         );
 
