--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -202,9 +202,9 @@
             projectile motion. Surely, there will always be the air resistance force, but we usually assume it is
             negligible, since it is a good approximation when the object’s weight is large compared to the air
             resistance force.`,
-            `Um objeto arremessado no ar que tem apenas a força da gravidade agindo sobre ele está sob um movimento
+            `Se um objeto arremessado no ar e tem apenas a força da gravidade agindo sobre, ele está sob um movimento
             de projétil. Sempre haverá a força da resistência do ar, é claro, mas geralmente assumimos que tal
-            força seja desprezível, uma vez que mesmo fazendo isso temos uma boa aproximação quando o peso do objeto
+            força seja desprezível, uma vez que é uma boa aproximação quando o peso do objeto é grande
             comparado à resistência do ar.`,
         );
 
@@ -213,7 +213,7 @@
             `The motion can be split in two components: the vertical component (y) and the horizontal component (x).
             The gravity pulls the object down, thus this force acts only on the velocity of the vertical component
             (vy). The velocity in the horizontal component (vx) will remain constant along the object’s path.`,
-            `O movimento pode ser dividio em duas componentes: a componente verticl (y) e a componente horizontal (x).
+            `O movimento pode ser dividido em duas componentes: a componente vertical (y) e a componente horizontal (x).
             A gravidade puxa o objeto para baixo, portanto essa força age somente na velocidade da componente vertical
             (vy). A velocidade na componente horizontal (vx) permanece constante durate toda a trajetória do objeto.`,
         );
