--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -202,7 +202,7 @@
             projectile motion. Surely, there will always be the air resistance force, but we usually assume it is
             negligible, since it is a good approximation when the object’s weight is large compared to the air
             resistance force.`,
-            `Se um objeto é arremessado no ar e a única força agindo sobre ele é a gravidade, esse objeto está sob um movimento
+            `Se um objeto é arremessado no ar e a única força agindo sobre ele é a gravidade, esse objeto fica em um movimento
             de projétil. Sempre haverá a força da resistência do ar, é claro, mas geralmente assumimos que tal
             força seja desprezível, uma vez que se obtém uma boa aproximação quando o peso do objeto é muito grande se
             comparado à resistência do ar.`,
