projectile motion ptbr fixed

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -239,7 +239,7 @@
         TRANSLATION.add(
             '#warning-fiducial',
             `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
-            `É nescessário imprimir o marcador fiduciário para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
+            `É necessário imprimir o marcador fiducial para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
                 Clique aqui</a> par baixar).`
         );
 
@@ -247,7 +247,7 @@
             '#warning-hmd-1',
             `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
                 app without those equipments.`,
-            `Para uma experiência completa no modo RV, é nescessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
+            `Para uma experiência completa no modo RV, é necessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
                 joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
         );
 
