FIX: Inclined Plane in PT-BR on the index page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/inclined-plane.html">
+                <a href="javascript: TRANSLATION.redirect('projects/inclined-plane.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="inclined-plane" class="project-title w3-display-topleft w3-padding">Inclined Plane
                         </div>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/virtual-travel.html">
+                <a href="javascript: TRANSLATION.redirect('projects/virtual-travel.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="virtual-travel" class="project-title w3-display-topleft w3-padding">Virtual Travel
                         </div>
@@ -335,9 +335,9 @@
         );
 
         TRANSLATION.add(
-            '#incline-plane',
+            '#inclined-plane',
             'Inclined Plane',
-            'Plano inclinado'
+            'Plano Inclinado'
         );
 
         TRANSLATION.add(
