--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -132,11 +132,11 @@
                 </a>
 
                 <p class="more-modes-text">
-
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     <div id="warning-vr">
-                        Click in the "VR" button to enter in fullscreen VR mode in your mobile device (gyroscope sensor
-                        required).
+                        It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                                                                             target="_blank">Google Virtual Reality services</a>
+                        on the first access.
                     </div>
                 </p>
             </div>
@@ -418,9 +418,15 @@
 
         TRANSLATION.add(
             '#warning-vr',
-            `Click in the "VR" button to enter in fullscreen VR mode in your mobile device (gyroscope sensor required). `,
-            `Clique no botão "VR" para entrar no modo VR de tela cheia no seu dispositivo móvel (sensor giroscópio necessário).`
+            ` It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                                                                        target="_blank">Google Virtual Reality services</a>
+                        on the first access. `,
+            `  Pode ser necessário aceitar a instalação dos <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                                                                        target="_blank">serviços de Realidade Virtual da Google</a>
+                        no primeiro acesso. `
         );
+
+
 
 
         TRANSLATION.add(
