--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -267,8 +267,7 @@
             '#warning-hmd-1',
             `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
                 app without those equipments.`,
-            `Para uma experiência completa no modo RV, é nescessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
-                joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
+            `Para uma experiência completa no modo RV, é necessário um HMD (head-mounted display) e um controle joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
         )
 
         TRANSLATION.add(
