--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -254,10 +254,8 @@
 
         TRANSLATION.add(
             '#warning-hmd-1',
-            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
-                app without those equipments.`,
-            `Para uma experiência completa no modo RV, é necessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
-                joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display).`,
+            `Para uma experiência completa no modo RV, é necessário usar um HMD (head-mounted display).`
         );
 
         TRANSLATION.add(
