--- a/projects/src/architecture-application.html
+++ b/projects/src/architecture-application.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House</title>
     <link rel="stylesheet" href="../../css/w3.css">
-
+    <script src="../js/translation.js"></script>
     <style>
         html,
         body {
@@ -38,18 +38,62 @@
     <div id="blocker" class="w3-display-container">
 
         <div id="instructions" class="w3-display-middle w3-center w3-white w3-opacity">
-            <h1>Instructions</h1>
-            <p>Move: WASD</p>
-            <p>Look: Mouse</p>
-            <p>Toggle fly mode: F</p>
-            <p>Fly up: SPACE</p>
-            <p>Go down: SHIFT</p>
-            <p>(Click to continue)</p>
+            <div>
+                <p id="inst">Instructions</p>
+            </div>
+            <div id="move">Move: WASD</div>
+            <div id="look">Look: Mouse</div>
+            <div id="fly">Toggle fly mode: F</div>
+            <div id="flyup">Fly up: SPACE</div>
+            <div id="flydown">Go down: SHIFT</div>
+            <div id="click">(Click to continue)</div>
         </div>
 
     </div>
     <div id="stats"></div>
     <script type="module" src="architecture.js"></script>
+    <script type="text/javascript">
+        TRANSLATION.add(
+            '#move',
+            'Move: WASD',
+            'Mover: WASD'
+        );
+
+        TRANSLATION.add(
+            '#look',
+            'Look: Mouse',
+            'Olhar: Mouse',
+        );
+
+        TRANSLATION.add(
+            '#fly',
+            'Toggle fly mode: F',
+            'Alterar modo voar: F'
+        );
+
+        TRANSLATION.add(
+            '#flyup',
+            'Fly up: SPACE',
+            'Subir: ESPAÇO'
+        );
+
+        TRANSLATION.add(
+            '#flydown',
+            'Go down: SHIFT',
+            'Descer: SHIFT'
+        );
+
+        TRANSLATION.add(
+            '#click',
+            '(Click to continue)',
+            '(Clique para continuar)'
+        );
+        TRANSLATION.add(
+            '#inst',
+            '(Click to continue)',
+            '(Clique para continuar)'
+        );
+    </script>
 </body>
 
 </html>
