--- a/projects/src/solar-system-application-AR.html
+++ b/projects/src/solar-system-application-AR.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -57,7 +57,22 @@
 <body>
     <div id="webgl-output"></div>
     <script type="text/javascript">
-        mainMediumQuality();
+        var language = location.search;
+        if (language.length != 0) {
+            let aux = "?lang=";
+            language = language.substring(aux.length, language.length);
+            switch (language) {
+                case "en-US":
+                    mainMediumQuality("en-US");
+                    break;
+                case "pt-BR":
+                    mainMediumQuality("pt-BR");
+                    break;
+            }
+        }
+        else {
+            mainMediumQuality("en-US");
+        }
     </script>
 </body>
 
